--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,19 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
+    <header>
+        <h1>todo<span>list</span></h1>
+        <h2>A simple todo list app built with NodeJs</h2>        
+    </header>
     
-    <h1>This is the index page!</h1>
+    <section class="form">
+        <input type="text" id="todoInput" placeholder="Insert your task here...">
+    </section>
+    
+    <ul class="list">
+        
+    </ul>
+
     <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
